# latex2word

./: .gitignore  LICENSE  README.md  README_zh.md  RELEASE_CHECKLIST.md  my_temp.docx  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: code-quality.yml  online-convert.yml  python-publish.yml  test.yml
docs/: index.html
scripts/: prepare_release.sh
src/: main.py  tex2docx.py
test/: main.docx  main.tex  run.bash
tests/: README.md  example-figure-maker.tex  ref.bib  test_integration.py  test_tex2docx.py  test_unit.py
tests/en/: main.docx  main.tex  main_cli.docx  main_modified.tex
tests/en/multifigs/: main.tex  model.tex  multifig_examplefig.tex  multifig_main.tex  multifig_model.tex  tab_exampletable.tex
tests/en/temp_subtexfile_dir/: multifig_examplefig.tex  multifig_examplesubfigures.tex  tab_exampletable.tex  tab_table3.err  tab_table3.tex
tests/en_chapter/: main.docx  main.tex  main_modified.tex  out1.docx  out2.docx  out3.docx  run.sh
tests/en_chapter/temp_subtexfile_dir/: multifig_examplefig.tex  multifig_examplesubfigures.tex  tab_exampletable.tex  tab_table3.tex
tests/en_include/: main.docx  main.tex  main_modified.tex
tests/en_include/temp_subtexfile_dir/: multifig_examplefig.tex  multifig_examplesubfigures.tex  tab_exampletable.tex  tab_table3.tex
tests/en_include/tex/: equations.tex  figures.tex  tables.tex
tests/zh/: main.docx  main.tex  main_modified.tex
tests/zh/multifigs/: main.tex  model.tex  multifig_examplefig.tex  multifig_examplesubfigures.tex  multifig_main.tex  multifig_model.tex  tab_exampletable.tex  tab_table3.tex
tex2docx/: __init__.py  __main__.py  cli.py  config.py  constants.py  converter.py  default_temp.docx  exceptions.py  file_manager.py  modifier.py  parser.py  resolve_equation_labels.lua  subfile.py  tex2docx.py  tex2docx_legacy.py  utils.py
